feat : 오픈 그랲프 태그 설정 추가

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <!-- core style only -->
     <link href="https://unpkg.com/nes.css/css/nes-core.min.css" rel="stylesheet" />
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png"/>
+    <meta property="og:title" content="록맨 감정 일기장"/>
+    <meta property="og:description" content="나만의 록맨 감정 일기장"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
